; ModuleID = '/home/carl/AnghaBench/git/extr_wrapper.c_xgetcwd.c'
source_filename = "/home/carl/AnghaBench/git/extr_wrapper.c_xgetcwd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [40 x i8] c"unable to get current working directory\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xgetcwd() #0 {
  %1 = alloca %struct.strbuf, align 4
  %2 = bitcast %struct.strbuf* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %2, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %3 = call i64 @strbuf_getcwd(%struct.strbuf* %1)
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = call i32 @_(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %7 = call i32 @die_errno(i32 %6)
  br label %8

8:                                                ; preds = %5, %0
  %9 = call i8* @strbuf_detach(%struct.strbuf* %1, i32* null)
  ret i8* %9
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @strbuf_getcwd(%struct.strbuf*) #2

declare dso_local i32 @die_errno(i32) #2

declare dso_local i32 @_(i8*) #2

declare dso_local i8* @strbuf_detach(%struct.strbuf*, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
